# RootDictExample

./: CMakeLists.txt
inc/: DictLinkDef.h
